1. Added count down timer 2. Added slider 3. Fixed header issue on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,7 +13,15 @@ body {
 
 #event-dates{
     width: 50%;
-    padding-top: 2%;
+    padding-top: 1%;
+}
+
+#mobile-only{
+    display: none;
+}
+
+#slider-container{
+    margin-top: 1%;
 }
 
 @media (max-width: 767px) {
@@ -28,5 +36,16 @@ body {
         padding-top: 5%;
         width: 100%;
     }
+    
+    #desktop-only{
+        display: none;
+    }
 
+    #mobile-only{
+        display: block;
+    }
+
+    #slider-container{
+        margin-top: 5%;
+    }
 }
